examples/errors/music/unclosed_grace.abc
X:1
T:Unclosed Grace
K:C
% M003: Missing }
{gab CDEF|
